--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,15 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      <img src="assets/img/logo-vdl.png"/>
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
+<ion-content padding class="home_background">
+  Benvingut a Descobrir la Vall de Lord.
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    <button ion-button color="secondary" (click)="goToAbout()">Iniciar</button>
+    <button ion-button color="secondary" (click)="goToAboutEstudiantet()">Estudiantet</button>
   </p>
 </ion-content>
