tags de diferents punts d'interes sense ser dinamic

--- a/src/pages/joc/joc.html
+++ b/src/pages/joc/joc.html
@@ -15,10 +15,13 @@
 
 <ion-content padding>
   <button ion-button>Go To next</button><br>
-  X= <span id="lat">xxxx</span><br>
-  Y= <span id="lon">xxxx</span><br>
-  Distancia= <span id="difx"></span><br>
+  <p>Coordenades X = {{coorX}}</p>
+  <p>Coordenades X = {{coorY}}</p>
+  Coordenades X = <span id="lat">xxxx</span><br>
+  Coordenades Y= <span id="lon">xxxx</span><br>
+  Distancia= <span id="difx">xxxx</span><br>
   <!--dify= <span id="dify"></span>-->
   Resultat: <span id="Resultat">xxxx</span><br>
+  Sentit: <span id="sentit">xxxx</span><br>
   <!--<button ion-button color="secondary" (click)="goToAbout()">Iniciar</button>-->
 </ion-content>
