--- a/src/pages/estudiantet/estudiantet.html
+++ b/src/pages/estudiantet/estudiantet.html
@@ -1,18 +1,37 @@
-<!--
-  Generated template for the EstudiantetPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>estudiantet</ion-title>
+    <ion-title>
+      <img src="assets/img/logo-vdl.png"/>
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content padding>
+<ion-content class="card-background-page">
+
+  <ion-card  *ngFor="let item of cardItems">
+    <ion-item>
+      <h1>{{item.titol}}</h1>
+    </ion-item>
+    <img [src]="item.image"/>
+    <ion-card-content>
+    <p>{{item.content}}</p>
+    </ion-card-content>
+    <ion-row>
+      <ion-col>
+        <button ion-button icon-left clear small>
+          <ion-icon name="thumbs-up"></ion-icon>
+          <div>{{item.like}} Likes</div>
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button icon-left clear small>
+          <ion-icon name="text"></ion-icon>
+          <div>{{item.coment}} Comentaris</div>
+        </button>
+      </ion-col>
+    </ion-row>
+
+  </ion-card>
 
 </ion-content>
