nostrar llista ordenada de request

--- a/src/pages/estudiantet/estudiantet.html
+++ b/src/pages/estudiantet/estudiantet.html
@@ -8,7 +8,7 @@
 
 
 <ion-content class="card-background-page">
-  <p>Your Location:<h2 id="lat"></h2>, <h2 id="lon"></h2>
+  <p>Your Location:<h2 id="lat"></h2>, <h2 id="lon"></h2>, <h2 id="dist"></h2>
   <ion-card  *ngFor="let item of cardItems">
     <ion-item>
       <h1>{{item.titol}}</h1>
