--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,5 +11,6 @@
   <p>
     <button ion-button color="secondary" (click)="goToAbout()">Iniciar</button>
     <button ion-button color="secondary" (click)="goToAboutEstudiantet()">Estudiantet</button>
+    <button ion-button color="secondary" (click)="goToAboutLocalitzacions()">localitzacions</button>
   </p>
 </ion-content>
