--- a/src/pages/localitzacions/localitzacions.html
+++ b/src/pages/localitzacions/localitzacions.html
@@ -14,6 +14,9 @@
 
 
 <ion-content padding>
+  <button ion-button color="secondary" (click)="obtenerPosicion()">Iniciar</button>
+  <h2>Latitud: {{coords.lat}}</h2>
+  <h2>Longitud: {{coords.lng}}</h2>
   <!--<ion-item>
   <button ion-button color="secondary" (click)="searchLocalitzacio(1.234,12.444)">Go To next</button><br>
   <span id="prova">xxxx</span><br>
