versió final app 0.1

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      <img src="assets/img/logo-vdl.png"/>
+      <img src="assets/img/logo-vdl-mini.png"/>
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -9,8 +9,8 @@
 <ion-content padding class="home_background">
   Benvingut a Descobrir la Vall de Lord.
   <p>
-    <button ion-button color="secondary" (click)="goToAbout()">Iniciar</button>
-    <button ion-button color="secondary" (click)="goToAboutEstudiantet()">Estudiantet</button>
+    <!--<button ion-button color="secondary" (click)="goToAbout()">Iniciar</button>
+    <button ion-button color="secondary" (click)="goToAboutEstudiantet()">Estudiantet</button>-->
     <button ion-button color="secondary" (click)="goToAboutLocalitzacions()">localitzacions</button>
   </p>
 </ion-content>
